feat: Complete Godot 4.3.0 reverse engineering and tooling setup
- Confirmed game engine: Godot 4.3.0 (from PCK header)
- Updated flake.nix with comprehensive Godot tooling:
  - godot_4, godotpcktool, gdtoolkit, gdscript-formatter
  - blender, imagemagick, gimp for asset work
  - Binary analysis tools (hexyl, binutils)
- Created QUICKSTART.md for fast onboarding
- Comprehensive TECHNICAL_RESEARCH.md with:
  - Full file structure documentation
  - Building resource schema (30+ properties)
  - Perk resource schema
  - 80+ buildings categorized
  - 43 perks documented
  - Modding workflow guides
- Added setup-gdsdecomp.sh for full project recovery
- Updated .gitignore for extracted files and build artifacts

Extracted PCK shows:
- 351MB, 2,966 files
- GLB models (Blender compatible)
- Readable .gdshader files
- Compiled GDScript (.gdc) - needs gdsdecomp for decompilation
- Binary resources (.res) with readable string data

--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,42 @@
-# Build outputs
+# Extracted game files (don't commit copyrighted content)
+extracted/
+*.pck
+
+# Godot editor files
+.godot/
+*.import
+
+# Build artifacts
+*.gdc
 result
-result-*
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-.venv/
-venv/
-*.egg-info/
-
-# IDE
-.idea/
-*.swp
-*.swo
-*~
-.vscode/
-
-# OS
+# OS files
 .DS_Store
 Thumbs.db
 
-# Game files (don't commit game assets)
-*.exe
-*.dll
-*.assets
-*.resource
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Large binary files
-*.psd
-*.xcf
-*.blend1
-*.blend2
+# Python
+__pycache__/
+*.pyc
+.venv/
+venv/
 
-# Temporary
+# Temporary files
 *.tmp
 *.bak
 *.log
 
-# Secrets
-.env
-*.secret
+# Downloaded tools
+tools/gdsdecomp/
+*.AppImage
+*.zip
+*.tar.gz
 
-# Nix
-.direnv/
-
+# Mod build outputs
+build/
+dist/
