docs: Add comprehensive analysis - RNG system, Linux port, art guidelines update
## Decompilation Complete
- Full project recovery with gdsdecomp v2.4.0
- 51 GDScript files decompiled (0 failures)
- 1469 resources converted
- 322 scenes exported

## New Documentation
- RNG_SYSTEM_ANALYSIS.md: Complete building/perk selection algorithm
  - Weighted pool system (Common: 8, Uncommon: 4, Rare: 1)
  - Perk weight bonuses (SolarPunk, IAmLegion, etc.)
  - Moddable parameters identified
  - Profile system design for slider mod

- LINUX_PORT_ANALYSIS.md: Native port feasibility study
  - Verdict: HIGHLY FEASIBLE (Godot 4.3.0)
  - NixOS packaging sketch
  - GodotSteam considerations
  - Developer contact strategy

## Art Guidelines Update
- CONFIRMED faction colors from decompiled source:
  - Corp: #BC9A51 (Golden/Amber)
  - Illegal: #B53445 (Deep Red)
  - Govt: #4480B2 (Official Blue)
  - Volt: #81A770 (Electric Green)
  - Neutral: #887EA3 (Muted Purple)
- Added lights levels documentation
- UI color references (#15ea79, #56b1FF, #fcbf5e)

## Tooling
- Added gdre symlink for gdsdecomp
- Updated .gitignore for recovered/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Extracted game files (don't commit copyrighted content)
+# Extracted/recovered game files (don't commit copyrighted content)
 extracted/
+recovered/
 *.pck
 
 # Godot editor files
