feat(portal-input): implement working EIS input via Wayland portals
MAJOR BREAKTHROUGH: Unfocused input injection now works!

What's working:
- RemoteDesktop portal integration with EIS socket
- Full EIS handshake using reis crate
- Seat/device capability binding
- Absolute pointer motion (motion_absolute)
- Mouse clicking (button press/release)
- Device frame sequencing

New commands:
- portal-input eis: Show EIS regions and coordinate info
- portal-input eis-send -x X -y Y: Move cursor
- portal-input eis-send --click: Move and click
- portal-input eis-send --shake: Visual cursor shake

Coordinate mapping documented for 6-monitor setup:
- Dell E2420H (AI monitor): EIS region [1], x:0-1536, y:796-1660

Known limitation: KDE doesn't support persistent RemoteDesktop sessions,
so consent dialog appears each time. Daemon mode planned to work around.

Documentation updated:
- docs/AI_INTERACTION_STRATEGIES.md: Full EIS workflow docs
- docs/WAYLAND_INPUT_WORKAROUNDS.md: Implementation details
- docs/SESSION_CONTEXT.md: Updated session state

--- a/tools/portal-input/Cargo.toml
+++ b/tools/portal-input/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "portal-input"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
 ashpd = { version = "0.10", features = ["tokio"] }
+reis = "0.5"
 tokio = { version = "1", features = ["full"] }
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
